bindings/bindings-python/smpp_codec_ffi.py

_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_u16.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_u16.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_u16.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_u16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_u16.restype = ctypes.c_uint16
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_i16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_i16.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_i16.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_i16.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_i16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_i16.restype = ctypes.c_int16
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_u32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_u32.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_u32.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_u32.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_u32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_u32.restype = ctypes.c_uint32
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_i32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_i32.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_i32.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_i32.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_i32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_i32.restype = ctypes.c_int32
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_u64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_u64.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_u64.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_u64.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_u64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_u64.restype = ctypes.c_uint64
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_i64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_i64.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_i64.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_i64.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_i64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_f32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_f32.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_f32.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_f32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_f64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_f64.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_f64.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_f64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_pointer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_pointer.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_pointer.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_pointer.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_pointer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_pointer.restype = ctypes.c_void_p
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_void.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_void.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_void.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_void.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_void.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_void.restype = None
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_bind_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_bind_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_bind_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_bind_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_broadcast_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_broadcast_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_broadcast_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_broadcast_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_cancel_broadcast_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_cancel_broadcast_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_cancel_broadcast_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_cancel_broadcast_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_cancel_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_cancel_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_cancel_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_cancel_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_data_sm.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_data_sm.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_data_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_data_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_deliver_sm.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_deliver_sm.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_delivery_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_delivery_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_enquire_link.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_enquire_link.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_enquire_link_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_enquire_link_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_generic_nack.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_generic_nack.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_outbind.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_outbind.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_query_broadcast_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_query_broadcast_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_query_broadcast_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_query_broadcast_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_query_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_query_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_query_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_query_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_replace_sm_request.argtypes = (
)
